force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work_Cache__c/agf__ADM_Work_Cache__c.object-meta.xml
<CustomObject>
    <label>Work Cache</label>
    <nameField>
        <label>Work Cache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Cache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>