force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work_Cache__c/fields/agf__Change_List_Description__c.field-meta.xml
<CustomField>
    <fullName>agf__Change_List_Description__c</fullName>
    <label>Change List Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>