force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work_Cache__c/fields/agf__Changes__c.field-meta.xml
<CustomField>
    <fullName>agf__Changes__c</fullName>
    <description>Stores a JSON formatted array of changes.</description>
    <label>Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>