force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work_Cache__c/fields/agf__Field_Names_With_Changes__c.field-meta.xml
<CustomField>
    <fullName>agf__Field_Names_With_Changes__c</fullName>
    <label>Field Names With Changes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>