force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work_Cache__c/fields/agf__Has_Been_Opened__c.field-meta.xml
<CustomField>
    <fullName>agf__Has_Been_Opened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Opened</label>
    <type>Checkbox</type>
</CustomField>